// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RecordListCard > should have a snapshot match for its appearance 1`] = `
.c0 {
  position: relative;
  width: 300px;
  min-height: 240px;
  display: grid;
  grid-template-rows: 200px 1fr;
  background-color: var(--primary-color);
  border-radius: 16px;
}

.c0:hover {
  background-color: var(--hovering-color);
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
}

.c2 {
  height: 100%;
  display: flex;
  flex-direction: column;
  row-gap: 8px;
  padding: 8px 16px;
  justify-content: center;
  align-items: flex-start;
}

.c3 {
  color: var(--white-color);
  font-size: 16px;
  font-weight: 600;
}

.c4 {
  color: var(--white-color);
  font-size: 16px;
  font-weight: 400;
}

<div
  class="c0"
>
  <img
    alt="kuman514"
    class="c1"
    src="/src/assets/avatar/avatar.jpeg"
  />
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      kuman514
    </span>
    <span
      class="c4"
    >
      2-5 / 12345679점
    </span>
  </div>
</div>
`;

exports[`RecordListCard > should have a snapshot match showing youtube mark and special tags 1`] = `
.c6 {
  padding: 4px 8px;
  justify-content: center;
  align-items: center;
  background-color: var(--gray-color);
  border-radius: 4px;
  font-size: 12px;
  font-weight: 400;
  color: var(--white-color);
}

.c0 {
  position: relative;
  width: 300px;
  min-height: 240px;
  display: grid;
  grid-template-rows: 200px 1fr;
  background-color: var(--primary-color);
  border-radius: 16px;
}

.c0:hover {
  background-color: var(--hovering-color);
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
}

.c2 {
  height: 100%;
  display: flex;
  flex-direction: column;
  row-gap: 8px;
  padding: 8px 16px;
  justify-content: center;
  align-items: flex-start;
}

.c3 {
  color: var(--white-color);
  font-size: 16px;
  font-weight: 600;
}

.c4 {
  color: var(--white-color);
  font-size: 16px;
  font-weight: 400;
}

.c5 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 8px;
}

.c7 {
  position: absolute;
  top: 16px;
  right: 16px;
}

<div
  class="c0"
>
  <img
    alt="kuman514"
    class="c1"
    src="/src/assets/avatar/avatar.jpeg"
  />
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      kuman514
    </span>
    <span
      class="c4"
    >
      2-5 / 12345679점
    </span>
    <div
      class="c5"
    >
      <span
        class="c6"
      >
        yasuo
      </span>
      <span
        class="c6"
      >
        koishi
      </span>
      <span
        class="c6"
      >
        노미스 ALL
      </span>
    </div>
  </div>
  <svg
    class="c7"
    fill="none"
    height="48"
    viewBox="0 0 48 48"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 40V8L40 24L8 40Z"
      fill="white"
      stroke="white"
    />
  </svg>
</div>
`;
